force-app/main/default/objects/OrderSummary/fields/COMM_BillingVATNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_BillingVATNumber__c</fullName>
    <description>VAT Number for invoicing.</description>
    <label>Billing VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>