force-app/main/default/objects/OrderSummary/fields/COMM_CPMSStatusFormula__c.field-meta.xml
<CustomField>
    <fullName>COMM_CPMSStatusFormula__c</fullName>
    <formula>IF ( INCLUDES ( COMM_CPMSStatus__c , &quot;New&quot; ), &quot;New; &quot;, null ) &amp;
IF ( INCLUDES ( COMM_CPMSStatus__c , &quot;Reserved&quot; ), &quot;Reserved; &quot;, null ) &amp;
IF ( INCLUDES ( COMM_CPMSStatus__c , &quot;Cancelled&quot; ), &quot;Cancelled; &quot;, null ) &amp;
IF ( INCLUDES ( COMM_CPMSStatus__c , &quot;Error&quot; ), &quot;Error&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPMS Status</label>
    <type>Text</type>
</CustomField>