force-app/main/default/objects/OrderSummary/fields/COMM_IsLegacyOrder__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsLegacyOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Order was imported from legacy system or not.</description>
    <label>Legacy Order</label>
    <type>Checkbox</type>
</CustomField>