force-app/main/default/objects/OrderSummary/fields/COMM_ReplacedOrderProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReplacedOrderProcessStatus__c</fullName>
    <description>Flag to control the cancellation of the Replaced Order/OrderLines</description>
    <label>Replaced Order Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Process</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>