force-app/main/default/objects/OrderSummary/fields/COMM_ResellerVoucherStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_ResellerVoucherStatus__c</fullName>
    <description>Status of integration between Salesforce and Mulesoft for Reseller Order Voucher</description>
    <label>Reseller Voucher Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FATAL_ERROR</fullName>
            </value>
            <value>
                <fullName>INTEGRATED</fullName>
            </value>
            <value>
                <fullName>RETRY_EXHAUSTED</fullName>
            </value>
            <value>
                <fullName>SENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>