force-app/main/default/objects/OrderSummary/fields/COMM_ResellerVoucherStatusDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_ResellerVoucherStatusDate__c</fullName>
    <label>Reseller Voucher Status Date</label>
    <type>DateTime</type>
</CustomField>