force-app/main/default/objects/OrderSummary/fields/COMM_ResellerVoucherStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>COMM_ResellerVoucherStatusMessage__c</fullName>
    <label>Reseller Voucher Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>