force-app/main/default/objects/OrderSummary/fields/COMM_SalesforceOrderId__c.field-meta.xml
<CustomField>
    <fullName>COMM_SalesforceOrderId__c</fullName>
    <description>Mulesoft identifier generated between Reseller Id (Account.COMM_ResellerId__c) concatenated with Order Id (OriginalOrderId), separated by “-”.</description>
    <formula>Account.COMM_ResellerId__c + &apos;-&apos; + CASESAFEID(OriginalOrderId)</formula>
    <label>Salesforce Order External Id</label>
    <type>Text</type>
</CustomField>