force-app/main/default/objects/OrderSummary/fields/COMM_SalesType__c.field-meta.xml
<CustomField>
    <fullName>COMM_SalesType__c</fullName>
    <description>Vendas a Credito or Vendas a Dinheiro</description>
    <label>COMM_SalesType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>VD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>