force-app/main/default/objects/OrderSummary/fields/COMM_VoucherLastSendDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_VoucherLastSendDate__c</fullName>
    <label>Voucher Last Send Date</label>
    <type>DateTime</type>
</CustomField>