force-app/main/default/objects/OrderSummary/fields/Total_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Total_Refunded__c</fullName>
    <label>Total Refunded</label>
    <summarizedField>OrderPaymentSummary.RefundedAmount</summarizedField>
    <summaryForeignKey>OrderPaymentSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>