force-app/main/default/objects/OrderSummary/fields/Total_Refunded_form__c.field-meta.xml
<CustomField>
    <fullName>Total_Refunded_form__c</fullName>
    <formula>Total_Refunded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>