force-app/main/default/objects/OrderSummary/listViews/Order_Summaries_Kiosk.listView-meta.xml
<ListView>
    <fullName>Order_Summaries_Kiosk</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>GrandTotalAmount</columns>
    <columns>CreatedDate</columns>
    <columns>SalesChannel</columns>
    <columns>SalesStore</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterOrEqual</operation>
        <value>9/5/2024 4:00 PM</value>
    </filters>
    <filters>
        <field>SalesChannel</field>
        <operation>contains</operation>
        <value>kiosk</value>
    </filters>
    <label>Order Summaries - Kiosk</label>
</ListView>